Pull request #329: Ikresic MM-5534 android sdk display banner in app webview only portrait orientation
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-5534-android-sdk-display-banner-in-app-webview-only-portrait-orientation to feature/ikresic-MM-5534-android-sdk-display-inapp-webview

Squashed commit of the following:

commit 1ad2314f3dbce1bd42464cb0d572ec710d69d81b
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Apr 4 16:08:40 2023 +0200

    - fixed broken test cases, small code updates

commit edd48eb6eab5a09260d041a6810ee3bf7c0e1e30
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Apr 4 14:23:48 2023 +0200

    - fixed broken test cases, small code updates

commit d9478dbe7fd5b41f178c8f95c6f1b3b624552389
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Apr 4 13:33:08 2023 +0200

    - fixed broken test cases, small code updates

commit 2b285a6a842f39f2456282b9f4d42cbd6d08bfd9
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Apr 4 13:32:02 2023 +0200

    - fixed broken test cases, small code updates

commit bfd8afa4ffd43bd98e20d834f01b3cec6e9fa58c
Author: ikresic <ivan.kresic@infobip.com>
Date:   Fri Mar 31 15:50:36 2023 +0200

    - refactored MainActivity code

commit 47ddc07635622e54980b6fefb245513ae2848d97
Author: ikresic <ivan.kresic@infobip.com>
Date:   Fri Mar 31 15:31:58 2023 +0200

    - provided new test cases to check InAppWebViewMessage functionalities

commit 69c967969d5afbe103c579a577fc19a79f996437
Author: ikresic <ivan.kresic@infobip.com>
Date:   Fri Mar 31 14:41:13 2023 +0200

    - small update on cardview shadowing

commit 8f8d30dfea62af43d91b5369ce4bc24d24a34cb1
Author: ikresic <ivan.kresic@infobip.com>
Date:   Fri Mar 31 13:54:24 2023 +0200

    - updated min and max height valuse
    - provided method to calculate height in pixels regarding density points
    - provided new testing cases
    - provided new htmls for banners

commit aedc9f260886d4ed57cf3232d805cc4f07f81843
Author: ikresic <ivan.kresic@infobi

--- a/infobip-mobile-messaging-android-demo/src/customInApp/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/customInApp/res/layout/activity_main.xml
@@ -7,4 +7,60 @@
 
     <include layout="@layout/toolbar" />
 
+    <Button
+        android:layout_marginTop="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_banner_big_top"
+        android:text="Send big top banner!"/>
+
+    <Button
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_banner_small_top"
+        android:text="Send small top banner!"/>
+
+    <Button
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_banner_big_bottom"
+        android:text="Send big bottom banner!"/>
+
+    <Button
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_banner_small_bottom"
+        android:text="Send small bottom banner!"/>
+
+    <Button
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_banner_popup"
+        android:text="Send popup in app message!"/>
+
+    <Button
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_banner_fullscreen"
+        android:text="Send full screen message!"/>
+
+    <Button
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test_native_inapp"
+        android:text="Send native in app message!"/>
 </LinearLayout>
