Pull request #335: Jdzubak MCA-2856 inappchat customizations improvement
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2856-inappchat-customizations-improvement to master

Squashed commit of the following:

commit 6a2c8e2a639ba67dc65666625bbfc64f2a73560e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Apr 24 15:38:50 2023 +0200

    MCA-2877 Formatting fix

commit 07ae9bb5b1bb1a0d6d9fe3fe5da41d86a2711b6a
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Apr 24 15:37:54 2023 +0200

    MCA-2877 Formatting fix

commit 7560548813ba27a7b200ad2376840280ac4c6af9
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Apr 24 15:20:57 2023 +0200

    MCA-2877 Added new customizable attributes, input cursor color, status bar icons color mode, message input text color as standalone attribute.

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/attributes.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/attributes.xml
@@ -12,6 +12,10 @@
     <declare-styleable name="InAppChatToolbarViewStyleable">
         <attr name="ibChatToolbarBackgroundColor" format="color|reference" />
         <attr name="ibChatStatusBarBackgroundColor" format="color|reference" />
+        <attr name="ibChatStatusBarIconsColorMode" format="enum">
+            <enum name="light" value="0" />
+            <enum name="dark" value="1" />
+        </attr>
         <attr name="ibChatNavigationIcon" format="reference" />
         <attr name="ibChatNavigationIconTint" format="color|reference" />
         <attr name="ibChatTitleTextAppearance" format="reference" />
@@ -35,6 +39,7 @@
 
     <declare-styleable name="InAppChatInputViewStyleable">
         <attr name="ibChatInputTextAppearance" format="reference" />
+        <attr name="ibChatInputTextColor" format="color|reference" />
         <attr name="ibChatInputBackgroundColor" format="color|reference" />
         <attr name="ibChatInputHintText" format="string|reference" />
         <attr name="ibChatInputHintTextColor" format="color|reference" />
@@ -44,6 +49,7 @@
         <attr name="ibChatInputSendIcon" format="reference" />
         <attr name="ibChatInputSeparatorLineColor" format="color|reference" />
         <attr name="ibChatInputSeparatorLineVisible" format="boolean" />
+        <attr name="ibChatInputCursorColor" format="color|reference" />
     </declare-styleable>
 
 </resources>
