Pull request #337: Landscape in app messages
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-5574-android-sdk-display-banner-fullscreen-and-popup-in-app-webview-landscape-orientation to feature/ikresic-MM-5534-android-sdk-display-inapp-webview

Squashed commit of the following:

commit 1b5a2122479efda1cca13f16891627e8b0f63326
Author: ikresic <ivan.kresic@infobip.com>
Date:   Fri Apr 28 09:50:10 2023 +0200

    - small code updates

commit 369891444a11f777f31d735f020f11b556d111e2
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Apr 27 16:59:03 2023 +0200

    - small code updates

commit 0913528f00de8ca1ff2726332679671325441ee0
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Apr 27 09:41:26 2023 +0200

    - small code updates

commit 6624e0cfe63b7198d9aa16ce0b13007e6ce496d9
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Apr 27 09:40:15 2023 +0200

    - small code updates

commit 0ee4ae442d16ead124a86ff56c5b9ed6114d5d21
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Apr 25 13:30:48 2023 +0200

    - provided support for landscape in app messages

--- a/infobip-mobile-messaging-android-sdk/src/main/res/layout/ib_inapp_webview.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/res/layout/ib_inapp_webview.xml
@@ -8,6 +8,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             app:cardUseCompatPadding="true"
             app:cardElevation="2dp"
             android:id="@+id/webview_dialog_card"
