Pull request #346: Jdzubak MCA-2851 dark mode
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2851_dark_mode to master

Squashed commit of the following:

commit b731bd2faddfd0be86301347e4ed874cccac7fdf
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed May 24 16:00:01 2023 +0200

    MCA-2923 Separate function to check fragments equality

commit 5d10afeeb960582192c81caf6ef94bfa83773737
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed May 24 14:36:54 2023 +0200

    MCA-2923 Added missing theme inheritance

commit f9843a459731c6c5b0391e8007521e081c5c1ce1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 23 19:25:18 2023 +0200

    MCA-2923 Cleaned style

commit b714cd46fa2636a3bf12b299e640a45a2bcd835a
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 23 18:03:11 2023 +0200

    MCA-2923 Small alignments

commit 8889629d15cc07c325c11f0b8ea91a0707612433
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 23 17:54:22 2023 +0200

    MCA-2923 Demo app added dark mode toggle, fixed fragment transactions

commit 9be9d3728df5eef72033bc80fd7e363af20c2bc6
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 23 15:47:09 2023 +0200

    DarkMode unfinished

commit 4f3ab0dd5e8783d4562c2276d0b0e8cf3e931aaa
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri May 19 18:05:22 2023 +0200

    remove ib application codes

commit 056b72703c0f10a371ca97a83fc18f0c42f0ad83
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri May 19 18:03:10 2023 +0200

    done

commit ad844231cdf0f8402565184ea685c526ac113f6f
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri May 19 17:25:48 2023 +0200

    done

commit 71589f3b569fa955d176933fa709b50d477f02e6
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu May 18 14:30:57 2023 +0200

    wip

commit 4764a8f8a6b243a602d3762d8b46644845313960
Merge: a9c7425f d3307431
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu May 18 10:29:56 2023

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <!--    region Themes-->
-    <style name="IB_ChatDefaultTheme" parent="Theme.MaterialComponents.Light.NoActionBar" />
+    <style name="IB_ChatDefaultTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="isLightTheme">true</item>
+    </style>
 
     <style name="IB_ChatDefaultTheme.Styled" parent="IB_ChatDefaultTheme">
         <item name="ibChatDefaultStyledTheme">true</item>
@@ -12,12 +14,13 @@
         <item name="ibChatAttachmentToolbarStyle">@style/IB.Chat.Toolbar.AttachmentPreview</item>
     </style>
 
-    <style name="IB_ChatDefaultTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
-    <style name="IB_ChatDefaultTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light"/>
+    <style name="IB_ChatDefaultTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
+
+    <style name="IB_ChatDefaultTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
     <!--    endregion-->
 
     <!--    region Views Default Styles-->
-    <style name="IB"/>
+    <style name="IB" />
 
     <style name="IB.Chat.Toolbar" parent="IB">
         <item name="ibChatToolbarBackgroundColor">@android:color/black</item>
