--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:animateLayoutChanges="true"
-    android:background="@android:color/white">
+    android:background="?attr/colorSurface">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/ib_lc_appbar"
