Pull request #347: MCA-2851 Added missed doco and dark mode switch into demo app chat flavor
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2851_dark_mode_update to master

Squashed commit of the following:

commit 4ff1e3432b43efed931c333c3538344eb0af9237
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu May 25 11:54:34 2023 +0200

    MCA-2851 Added missed doco and dark mode switch into demo app chat flavor

--- a/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/layout/activity_main.xml
@@ -206,21 +206,21 @@
                 android:id="@+id/dark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dark"
+                android:text="@string/dark_mode_dark"
                 style="?attr/materialButtonOutlinedStyle"
                 />
             <Button
                 android:id="@+id/light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Light"
+                android:text="@string/dark_mode_light"
                 style="?attr/materialButtonOutlinedStyle"
                 />
             <Button
                 android:id="@+id/auto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Auto"
+                android:text="@string/dark_mode_auto"
                 style="?attr/materialButtonOutlinedStyle"
                 />
         </com.google.android.material.button.MaterialButtonToggleGroup>
