--- a/infobip-mobile-messaging-android-demo/src/chat/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/layout/activity_main.xml
@@ -170,6 +170,39 @@
             app:layout_constraintTop_toTopOf="@id/personalize"
             app:layout_constraintBottom_toBottomOf="@id/personalize" />
 
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/darkModeToggle"
+            app:singleSelection="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/depersonalize"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <Button
+                android:id="@+id/dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dark_mode_dark"
+                style="?attr/materialButtonOutlinedStyle"
+                />
+            <Button
+                android:id="@+id/light"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dark_mode_light"
+                style="?attr/materialButtonOutlinedStyle"
+                />
+            <Button
+                android:id="@+id/auto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dark_mode_auto"
+                style="?attr/materialButtonOutlinedStyle"
+                />
+        </com.google.android.material.button.MaterialButtonToggleGroup>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
