Pull request #351: albanian language
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-2909_albanian_lang to master

Squashed commit of the following:

commit a494a80ede455bb4b6363ce10848b5383b971b8a
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 13 14:57:03 2023 +0200

    MCA-2997 setLanguage() fro InfobipRtcUi

commit d19bdc8bd42ae2c2099e38c6be51e2db373f7452
Merge: 0f387fb6 af01e99f
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jun 9 16:19:08 2023 +0200

    Merge remote-tracking branch 'origin/mtokar-MCA-2909_albanian_lang' into mtokar-MCA-2909_albanian_lang

commit 0f387fb63f55e401098e937bd16acd7e0983b858
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jun 9 16:18:13 2023 +0200

    wip

commit af01e99ff0e0cbc263ade99c6143c357e0d032cb
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Fri Jun 9 06:27:40 2023 +0000

    Applied suggestion

commit e38112b97b0775686b2064db59105e2286aea38c
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Jun 8 16:01:29 2023 +0200

    review fixes 2

commit cd1990e358c791dd1a8341e840c299995e92ca4f
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Jun 7 14:49:00 2023 +0200

    merge master

commit 9f88a115f7b4d141e7ef1cb9073a62ad60dc954b
Merge: b4919bcf f7da4922
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Jun 7 14:48:17 2023 +0200

    Merge remote-tracking branch 'origin/master' into mtokar-MCA-2909_albanian_lang

    # Conflicts:
    #	infobip-rtc-ui/src/main/res/values/strings.xml

commit b4919bcf3f18794987a6892a3b8de7f941a4bfa0
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Jun 7 14:25:23 2023 +0200

    new muted string
    albanian language option in demo
    fix locale in CallActivity context

commit 4f05bfce2ba3c5c96262865cce799d9e3cbd0037
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Jun 6 09:32:35 2023 +0200

    review fix 1

commit f96bc0ce5fb0a2f45d71ef5bdab30fe9f59db1ae
Author: Matuš Tokar <Matus.Tokar@infobip.c

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/menu/menu_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/menu/menu_main.xml
@@ -128,11 +128,15 @@
             android:enabled="true"
             android:title="@string/japanese"
             app:showAsAction="never" />
-
         <item
             android:id="@+id/german"
             android:enabled="true"
             android:title="@string/german"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/albanian"
+            android:enabled="true"
+            android:title="@string/albanian"
             app:showAsAction="never" />
     </group>
 </menu>
