Pull request #359: Ikresic MM-5576 android sdk handling button taps for the in app webview
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-5576-android-sdk-handling-button-taps-for-the-in-app-webview to feature/ikresic-MM-5534-android-sdk-display-inapp-webview

Squashed commit of the following:

commit c31ef379c537211f7ee0ed356e000d5516e604a5
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Jul 13 13:22:20 2023 +0200

    - fixed top banner animation

commit 5f83d93f6c366a748c64d943d23313c6fcebb7cd
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Jul 13 13:13:42 2023 +0200

    - provided queue dismiss when webview error happens

commit 6b45b525fb193917e15437285bafbea0f10429a8
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Jul 13 12:53:33 2023 +0200

    - fixed DialogStack not getting cleaned on banner timeout
    - disabled webview zoom

commit 2067aa2c29b7f2b082ffdedf206857fe4cbea80d
Merge: d797d3f4 42601ab3
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Jul 13 10:51:28 2023 +0200

    Merge branch 'ikresic-MM-5576-android-sdk-handling-button-taps-for-the-in-app-webview' into bugfix/ikresic-MM-5838-android-inappwebview-popup-flashing-when-displayed

commit 42601ab307634d19a694fee6006e0b545edd11b3
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Jul 12 16:59:34 2023 +0200

    - small PR updates and code cleanups

commit da7793da7a275e3cd46a31058f3d1f2adcebe779
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Jul 12 16:49:56 2023 +0200

    - provided missing deepLink setter

commit 97934e6ed2d4ced04a5e0b7432b56c66548f1f57
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Jul 12 15:44:21 2023 +0200

    - introduced handling of notification tapped and notification actions tapped

commit 18dd19a992bdad8ce88d70c0637928c92f077da4
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Jul 11 17:07:51 2023 +0200

    - added missing dimiss on action calls

commit 5da4ce18126fdba5c75954323a406aca5b50622b
Author: ikresic

--- a/infobip-mobile-messaging-android-sdk/src/main/res/layout/ib_inapp_webview.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/res/layout/ib_inapp_webview.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="2dp"
-            android:id="@+id/webview_dialog_card"
-            android:orientation="vertical"
-            tools:ignore="WebViewLayout">
 
-            <WebView
-                android:id="@+id/ib_webview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/webview_dialog_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true"
+        tools:ignore="WebViewLayout">
+
+        <WebView
+            android:id="@+id/ib_webview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
