Pull request #370: Mtokar MCA-3115 incoming call custom message
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-3115_incoming_call_custom_message to master

Squashed commit of the following:

commit ef0394c1b10f7f60d4a850a4b7796185f0d671d4
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Aug 11 12:17:13 2023 +0200

    review fixes 4

commit b5b53aefc888b6b846017ac07f19dda1cc9d272a
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Aug 10 16:08:45 2023 +0200

    removed accept & decline string keys

commit ad277988cb92e20c48c578467ccd59a973dd3fa9
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Aug 10 16:07:20 2023 +0200

    updated androidx.core
    CallNotificationFactory.kt refactored to use only NotificationCompat & CallStyle

commit bcca708a09b9f49e60da0cbcd72e4fe851911795
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Aug 9 14:28:16 2023 +0200

    review fixes 2

commit ed6eeda2cb2fcfbf72e48ccf55ce151668823e53
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Aug 9 10:59:54 2023 +0200

    review fixes 2

commit eaee507c2d52b5a2191c9a155fac9e4ca5094c5f
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Aug 9 09:06:32 2023 +0200

    change fallback color in IncomingCallMessageStyle.kt

commit 66e12865e96807c9e5f143d8d02f85dde59050aa
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Aug 8 10:47:13 2023 +0200

    remove ib app code

commit 7c5467fe4b1b794a8fa6d9a719de19d7a0dfc429
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Aug 8 10:45:56 2023 +0200

    review fixes 1

commit cc256f98ba734b70f7ede4537ebb8349f0d69ad1
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Aug 7 17:17:44 2023 +0200

    review fixes wip

commit d910feafd69a2710a00fe5cd8cd3f36026cd489f
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Aug 7 08:53:08 2023 +0000

    Applied suggestion

commit b6f8dfa02e4e84db7a1e76c6069c5b920e142bc8
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
D

--- a/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/values/styles.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- uncomment to override webrtc-ui style -->
-<!--    <style name="InfobipRtcUi">-->
-<!--        <item name="rtc_ui_color_foreground">#666666</item>-->
-<!--        <item name="rtc_ui_color_notification">#009900</item>-->
-<!--        <item name="rtc_ui_color_actions_background">#15666666</item>-->
-<!--        <item name="rtc_ui_color_actions_background_checked">#222222</item>-->
-<!--        <item name="rtc_ui_color_actions_icon">#222222</item>-->
-<!--        <item name="rtc_ui_color_actions_icon_checked">#B2fff0f0</item>-->
-<!--        <item name="rtc_ui_color_text_secondary">#7A666666</item>-->
-<!--        <item name="rtc_ui_color_background">#fff0f0</item>-->
-<!--        <item name="rtc_ui_color_overlay_background">#80666666</item>-->
-<!--        <item name="rtc_ui_color_alert_background">#99f00000</item>-->
-<!--        <item name="rtc_ui_color_accept">#000000</item>-->
-<!--        <item name="rtc_ui_color_hangup">#999999</item>-->
-<!--    </style>-->
+<!--    <style name="InfobipRtcUi">
+        <item name="rtc_ui_color_foreground">#666666</item>
+        <item name="rtc_ui_color_notification">#009900</item>
+        <item name="rtc_ui_color_actions_background">#15666666</item>
+        <item name="rtc_ui_color_actions_background_checked">#222222</item>
+        <item name="rtc_ui_color_actions_icon">#222222</item>
+        <item name="rtc_ui_color_actions_icon_checked">#B2fff0f0</item>
+        <item name="rtc_ui_color_text_secondary">#7A666666</item>
+        <item name="rtc_ui_color_background">#fff0f0</item>
+        <item name="rtc_ui_color_overlay_background">#80666666</item>
+        <item name="rtc_ui_color_alert_background">#99f00000</item>
+        <item name="rtc_ui_color_accept">#000000</item>
+        <item name="rtc_ui_color_hangup">#999999</item>
+        <item name="rtc_ui_incoming_call_headline_background">@drawable/ic_rounded_corners</item>
+        <item name="rtc_ui_incoming_call_message_background">@drawable/ic_rounded_corners</item>
+        <item name="rtc_ui_incoming_call_headline_text_color">@color/blue</item>
+        <item name="rtc_ui_incoming_call_headline_appearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="rtc_ui_incoming_call_message" translatable="false">@string/rtc_ui_incoming_call_message</item>
+        <item name="rtc_ui_incoming_call_headline" translatable="false">@string/rtc_ui_incoming_call_headline</item>
+    </style>-->
 </resources>
