--- a/infobip-rtc-ui/src/main/res/layout/fragment_incoming_call.xml
+++ b/infobip-rtc-ui/src/main/res/layout/fragment_incoming_call.xml
@@ -32,6 +32,44 @@
         app:tint="@color/rtc_ui_foreground"
         app:srcCompat="@drawable/ic_calls_30" />
 
+    <TextView
+        android:id="@+id/customHeadline"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name"
+        android:gravity="center"
+        android:visibility="gone"
+        app:autoSizeMaxTextSize="100sp"
+        app:autoSizeMinTextSize="36sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@id/customMessage"
+        tools:text="Incoming call custom integrator headline"
+        tools:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/customMessage"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="16dp"
+        android:gravity="center"
+        android:visibility="gone"
+        app:autoSizeMaxTextSize="100sp"
+        app:autoSizeMinTextSize="12sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toTopOf="@id/decline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/customHeadline"
+        tools:text="Incoming call custom integrator message"
+        tools:visibility="visible"/>
+
     <com.infobip.webrtc.ui.view.CircleImageButton
         android:id="@+id/decline"
         android:layout_width="wrap_content"
