--- a/infobip-mobile-messaging-android-demo/src/chat/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/layout/activity_main.xml
@@ -153,7 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/mm_personalize"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/customization"
             app:layout_constraintEnd_toStartOf="@id/depersonalize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/openChatView"
@@ -170,38 +170,49 @@
             app:layout_constraintTop_toTopOf="@id/personalize"
             app:layout_constraintBottom_toBottomOf="@id/personalize" />
 
-        <com.google.android.material.button.MaterialButtonToggleGroup
-            android:id="@+id/darkModeToggle"
-            app:singleSelection="true"
+        <Button
+            android:id="@+id/customization"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/personalize"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/darkModeToggle"
+            android:text="@string/runtime_customization" />
+
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/darkModeToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/depersonalize"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintVertical_bias="1.0"
+            app:singleSelection="true">
 
             <Button
                 android:id="@+id/dark"
+                style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dark_mode_dark"
-                style="?attr/materialButtonOutlinedStyle"
-                />
+                android:text="@string/dark_mode_dark" />
+
             <Button
                 android:id="@+id/light"
+                style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dark_mode_light"
-                style="?attr/materialButtonOutlinedStyle"
-                />
+                android:text="@string/dark_mode_light" />
+
             <Button
                 android:id="@+id/auto"
+                style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dark_mode_auto"
-                style="?attr/materialButtonOutlinedStyle"
-                />
+                android:text="@string/dark_mode_auto" />
         </com.google.android.material.button.MaterialButtonToggleGroup>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
