Pull request #378: MCa-3182 Fixed string resolving from style, InAppChatInputView's buttons customization improved
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3182-customizations-fixes to master

Squashed commit of the following:

commit 9ca6071592c3e2f38d217a4ac8a23a56efa756a8
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 8 10:29:52 2023 +0200

    MCA-3182 Demo - runtime customizations updated

commit 7c89accadcd01b228d209972775f6343cdec56e2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 8 10:07:19 2023 +0200

    MCa-3182 Fixed string resolving from style, InAppChatInputView's buttons customization improved

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat_input.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat_input.xml
@@ -50,7 +50,6 @@
         app:srcCompat="@drawable/ib_chat_send_btn_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/messageInput"
-        app:layout_constraintBottom_toBottomOf="@id/messageInput"
-        android:tint="@color/ib_selector_black_disabled"/>
+        app:layout_constraintBottom_toBottomOf="@id/messageInput"/>
 
 </merge>
