--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
@@ -48,9 +48,7 @@
         <item name="ibChatNetworkConnectionErrorText">@string/ib_chat_no_connection</item>
         <item name="ibChatNetworkConnectionErrorTextColor">@android:color/black</item>
         <item name="ibChatNetworkConnectionErrorTextAppearance">@null</item>
-        <item name="ibChatNetworkConnectionErrorLabelBackgroundColor">
-            @color/ib_chat_hint_text_color
-        </item>
+        <item name="ibChatNetworkConnectionErrorLabelBackgroundColor">@color/ib_chat_hint_text_color</item>
     </style>
 
     <style name="IB.Chat.Input" parent="IB">
