Pull request #383: MCA-3289 Added Serbian localization
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3289-serbian-localization to master

Squashed commit of the following:

commit 83cef1d3aff95e740149bc0e73e77c543701ec07
Merge: c3c47a19 ac8f3b3d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 29 08:32:06 2023 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-3289-serbian-localization

commit c3c47a19fff5124a926f79cbd703d65c1cac9ce7
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Sep 26 10:12:09 2023 +0200

    MCA-3289 Fixed review points, same layout resource for chat flavours

commit 358ac0dcd4642c600338780c51a908ca9b51358e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Sep 21 15:46:06 2023 +0200

    MCA-3289 Added Serbian localization

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/menu/menu_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/menu/menu_main.xml
@@ -138,5 +138,10 @@
             android:enabled="true"
             android:title="@string/albanian"
             app:showAsAction="never" />
+        <item
+            android:id="@+id/serbian"
+            android:enabled="true"
+            android:title="@string/serbian"
+            app:showAsAction="never" />
     </group>
 </menu>
